--- a/index.html
+++ b/index.html
@@ -89,6 +89,28 @@
             <!-- End vetstoria embed code -->
         </div>
     </main>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const widget = document.querySelector('vetstoria-widget');
+
+            if (widget) {
+                widget.addEventListener('widget-ga-interaction', (e) => {
+                    console.log('Event from widget:', e.detail);
+
+                    // Send the event to Google Analytics
+                    gtag('event', e.detail.action, {
+                        'event_category': 'vetstoria_widget',
+                        'event_label': e.detail.label
+                    });
+
+                    console.log('Event sent to Google Analytics:', e.detail.action, e.detail.label);
+                });
+            } else {
+                console.error('vetstoria-widget element not found.');
+            }
+        });
+    </script>
 </body>
 
 </html>
