--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
 
             if (widget) {
                 widget.addEventListener('widget-ga-interaction', (e) => {
-                    console.log('Event from widget:', e.detail);
+                    console.log('Event from widget: ', e.detail);
+                    console.log('Event from widget:action ', e.detail.action);
+                    console.log('Event from widget:label', e.detail.label);
 
                     // Send the event to Google Analytics
                     gtag('event', e.detail.action, {
                         'event_category': 'vetstoria_widget',
                         'event_label': e.detail.label
                     });
-
-                    console.log('Event sent to Google Analytics:', e.detail.action, e.detail.label);
                 });
             } else {
                 console.error('vetstoria-widget element not found.');
