--- a/index.html
+++ b/index.html
@@ -108,14 +108,18 @@
             if (widget) {
                 widget.addEventListener('widget-ga-interaction', (e) => {
                     console.log('Event from widget: ', e.detail);
-                    console.log('Event from widget:action ', e.detail.action);
-                    console.log('Event from widget:label', e.detail.label);
+                    const ga_action = e.detail.action[0] || 'unknown_action';
+                    const ga_label = e.detail.label[0] || 'unknown_label';
 
                     // Send the event to Google Analytics
-                    gtag('event', e.detail.action, {
+                    console.log('Sending event to Google Analytics:', ga_action, ga_label);
+                    gtag('event', ga_action, {
                         'event_category': 'vetstoria_widget',
-                        'event_label': e.detail.label
+                        'event_label': ga_label
                     });
+
+                    // Optionally, you can also log the event to the console
+                    console.log(`Event sent: ${ga_action} - ${ga_label}`);
                 });
             } else {
                 console.error('vetstoria-widget element not found.');
