--- a/index.html
+++ b/index.html
@@ -108,18 +108,22 @@
             if (widget) {
                 widget.addEventListener('widget-ga-interaction', (e) => {
                     console.log('Event from widget: ', e.detail);
-                    const ga_action = e.detail.action[0] || 'unknown_action';
-                    const ga_label = e.detail.label[0] || 'unknown_label';
 
-                    // Send the event to Google Analytics
-                    console.log('Sending event to Google Analytics:', ga_action, ga_label);
-                    gtag('event', ga_action, {
-                        'event_category': 'vetstoria_widget',
-                        'event_label': ga_label
-                    });
+                    // Make sure detail is an array and has at least one element
+                    if (Array.isArray(e.detail) && e.detail.length > 0) {
+                        const { action = 'unknown_action', label = 'unknown_label' } = e.detail[0];
 
-                    // Optionally, you can also log the event to the console
-                    console.log(`Event sent: ${ga_action} - ${ga_label}`);
+                        // Send the event to Google Analytics
+                        console.log('Sending event to Google Analytics:', action, label);
+                        gtag('event', action, {
+                            'event_category': 'vetstoria_widget',
+                            'event_label': label
+                        });
+
+                        console.log(`Event sent: ${action} - ${label}`);
+                    } else {
+                        console.warn('Unexpected event detail format:', e.detail);
+                    }
                 });
             } else {
                 console.error('vetstoria-widget element not found.');
