--- a/index.html
+++ b/index.html
@@ -92,11 +92,7 @@
     </main>
 
     <script>
-        /**
-            * The following event is sent when the page loads. You could
-            * wrap the event in a JavaScript function so the event is
-            * sent when the user performs some action.
-        */
+        // The following event is sent when the page loads.
         gtag('event', 'screen_view', {
             'app_name': 'vetstoria_widget',
             'screen_name': 'Home'
