--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BFZPLCQKG"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BFZPLCQKG"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-9BFZPLCQKG');
-    </script>
-    <!-- Google tag (gtag.js) -->
-    <!-- <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo 2</title>
-    <meta name="description" content="Demo 2 of the Vetstoria Widget"> -->
-    <!-- End Google tag -->
+    </script> -->
+    <!-- End Google tag (gtag.js) -->
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
@@ -28,6 +23,11 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NRWPB9KG');</script>
     <!-- End Google Tag Manager -->
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demo 2</title>
+    <meta name="description" content="Demo 2 of the Vetstoria Widget">
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"> -->
