--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 
     <script>
         // The following event is sent when the page loads.
-        gtag('event', 'screen_view', {
-            'app_name': 'vetstoria_widget',
-            'screen_name': 'Home'
-        });
+        // gtag('event', 'screen_view', {
+        //     'app_name': 'vetstoria_widget',
+        //     'screen_name': 'Home'
+        // });
 
         document.addEventListener('DOMContentLoaded', () => {
             const widget = document.querySelector('vetstoria-widget');
