--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                 <li>Bootstrap is not loading</li>
             </ul>
 
+            <button id="vg-btn-1">Test VG Button</button>
+
             <!-- Start vetstoria embed code -->
             <vetstoria-widget initial-posts-per-page="9"
                 initial-widget-title="This is a demo widget"></vetstoria-widget>
